--- a/components/_static-banner.scss
+++ b/components/_static-banner.scss
@@ -35,6 +35,7 @@
         }
         &.empty-banner {
             background: transparent;
+            height: auto;
         }
     }
     &.private .banner {
