--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+$rfs-base-value: 1.6rem !default; // font-size minimum
 // BOOTSTRAP
 @import "bootstrap/scss/functions";
 @import "helpers/bs-var-overrides"; // Bootstrap variable overrides
