Add font weight for selected tab in tabstrip
Add selected font weight variable

--- a/components/_tabstrip.scss
+++ b/components/_tabstrip.scss
@@ -114,6 +114,7 @@
                         &.selected {
                             background: $tabstrip-selected-bg !important;
                             border-color: $tabstrip-selected-top-border-color !important;
+                            font-weight: $tabstrip-tabs-font-selected-weight;
                             .wrap {
                                 color: $tabstrip-selected-font-color;
                             }
