--- a/components/_cards-3.scss
+++ b/components/_cards-3.scss
@@ -86,7 +86,7 @@ $cards-stack-max-breakpoint: ($cards-stack-min-breakpoint - 1);
                 }
                 h2 {
                     // font-weight: 700;
-                    margin-bottom: 10px;
+                    // margin-bottom: 10px;
                 }
                 > a, p > a:last-child { 
                     margin-top: 0;
