Comment out display property for dropdown toggle

--- a/layout/_header-4.scss
+++ b/layout/_header-4.scss
@@ -144,7 +144,7 @@ header.opt4 {
                         content: none;
                     }
                     ~ .dropdown-toggle {
-                        display: none;
+                        // display: none;
                     }
                 }
                 > li.open .dropdown-toggle .caret:before {
